# color-game

./: .flake8  Dockerfile  License.md  README.md  pyproject.toml  pyright.json
color_game/: color.py  game.py  main.py
color_game/map/: field.py  map.py
tests/: test_game.py  test_map.py
