[tool.poetry]
name = "color_game"
version = "0.1.0"
description = ""
authors = ["Michał 'zeno' Lipiński <michal.lipinski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
pyright = "^1.1.268"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
